--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.2.+'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile files('libs/uil.jar')
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
 }
