--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.1'
     compile files('libs/uil.jar')
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
+    compile project(path: ':multi-image-selector')
 }
